--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "axios": "^0.21.1",
     "date-fns": "^1.30.1",
+    "node-sass": "^4.0.0",
+    "plaid-threads": "^11.2.3",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-plaid-link": "^3.1.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "react-toastify": "^5.1.0",
     "socket.io-client": "^2.2.0"
