add oauth .env variables to docker (#90)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       PLAID_CLIENT_ID:
       PLAID_SECRET_SANDBOX:
       PLAID_SECRET_DEVELOPMENT:
+      PLAID_SANDBOX_REDIRECT_URI:
+      PLAID_DEVELOPMENT_REDIRECT_URI:
       PLAID_ENV:
       PORT: 5000
       DB_PORT: 5432
