Lw balance get (#128)
* add balance/get endpoint

* remove console.log (#124)

* check for redirect URI for OAuth (#125)

* change to check index of http

* change to ===0

* delete value in database

* add processor to .env file

* clean up accountCard component

* remove console logs

* fix get balance request

* change item to account, remove console.log

--- a/.env.template
+++ b/.env.template
@@ -10,6 +10,10 @@ PLAID_SECRET_SANDBOX=
 
 PLAID_ENV=sandbox
 
+# If you want to test the app using a payment processor, set PROCESSOR to 'true'
+
+IS_PROCESSOR=false
+
 # Only required for OAuth:
 
 # Sandbox Mode:
