--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       PLAID_CLIENT_ID:
       PLAID_SECRET_SANDBOX:
       PLAID_SECRET_DEVELOPMENT:
+      IS_PROCESSOR:
       PLAID_SANDBOX_REDIRECT_URI:
       PLAID_DEVELOPMENT_REDIRECT_URI:
       PLAID_ENV:
@@ -53,6 +54,7 @@ services:
       - 3001:3001
     environment:
       REACT_APP_PLAID_ENV: ${PLAID_ENV}
+      REACT_APP_IS_PROCESSOR: ${IS_PROCESSOR}
       REACT_APP_SERVER_PORT: 5000
     depends_on:
       - server
