--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "morgan": "~1.9.0",
     "node-fetch": "^2.3.0",
     "pg": "^7.9.0",
-    "plaid": "^9.0.0-beta.13",
+    "plaid": "^9.3.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
