--- a/.env.template
+++ b/.env.template
@@ -25,6 +25,8 @@ IS_PROCESSOR=false
 # Development mode:
 # When running in development mode, you must use an https:// url.
 # You will need to configure this https:// redirect URI in the Plaid developer dashboard.
+# Instructions to create a self-signed certificate for localhost can be found at
+# https://github.com/plaid/pattern-account-funding/blob/master/README.md#testing-oauth
 # If your system is not set up to run localhost with https://, you will be unable to test
 # the OAuth in development and should leave the PLAID_DEVELOPMENT_REDIRECT_URI blank.
 
