add Dwolla code

--- a/.env.template
+++ b/.env.template
@@ -13,6 +13,8 @@ PLAID_ENV=sandbox
 # If you want to test the app using a payment processor, set PROCESSOR to 'true'
 
 IS_PROCESSOR=false
+DWOLLA_ACCESS_TOKEN=
+DWOLLA_MASTER_ACCOUNT_ID=
 
 # Only required for OAuth:
 
