--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       PLAID_SECRET_SANDBOX:
       PLAID_SECRET_DEVELOPMENT:
       IS_PROCESSOR:
+      DWOLLA_ACCESS_TOKEN:
+      DWOLLA_MASTER_ACCOUNT_ID:
       PLAID_SANDBOX_REDIRECT_URI:
       PLAID_DEVELOPMENT_REDIRECT_URI:
       PLAID_ENV:
