--- a/.env.template
+++ b/.env.template
@@ -10,15 +10,17 @@ PLAID_SECRET_SANDBOX=
 
 PLAID_ENV=sandbox
 
-# If you want to test the app using a payment processor, set PROCESSOR to 'true'
-
-
-# The processor we use for testing is Dwolla.  If you would like to test with Dwolla, set IS_PROCESSOR to true
-# You will need to open a sandbox account at https://developers.dwolla.com/guides/sandbox. Fill in the temporary
-# DWOLLA_ACCESS_TOKEN that can be created on your dashboard at https://dashboard-sandbox.dwolla.com/applications-legacy.
-# This is a temporary token that is good for one hour before you need to create another one.  Also enter your
-# DWOLLA_MASTER_ACCOUNT_ID from your Superhero Savings Bank master account on your dashboard at
-# https://dashboard-sandbox.dwolla.com/account/funding-sources
+# If you want to test the app using a payment processor, set IS_PROCESSOR to 'true'.
+# The processor we use for testing in this sample app is Dwolla.
+# First, enable Dwolla on your Plaid developer dashboard at https://dashboard.plaid.com/team/integrations.
+# Scroll down to Dwolla and click on the 'Enable' button.
+# You will need to open a Dwolla sandbox account at https://developers.dwolla.com/guides/sandbox.
+# Go to the Dwolla developer dashboard at https://dashboard-sandbox.dwolla.com/applications-legacy and click the "create token"
+# button in order to create a temporary access token (this is good for one hour).
+# Copy this access token and paste it below as DWOLLA_ACCESS_TOKEN.
+# Finally, locate your Superhero Savings Bank master account id on the Dwolla developer dashboard at
+# https://dashboard-sandbox.dwolla.com/account/funding-sources.  The id can be found at the bottom of the smaller
+# white box on the bottom left corner of the page.  Copy this id and paste it below as the DWOLLA_MASTER_ACCOUNT_ID.
 
 IS_PROCESSOR=false
 DWOLLA_ACCESS_TOKEN=
