--- a/.env.template
+++ b/.env.template
@@ -12,6 +12,10 @@ PLAID_ENV=sandbox
 
 # If you want to test the app using a payment processor, set IS_PROCESSOR to 'true'.
 # The processor we use for testing in this sample app is Dwolla.
+# Dwolla is just one of the many payment providers who have partnered with Plaid. You can view the full list of
+# payment partners at https://plaid.com/docs/auth/partnerships/.
+
+# Dwolla steps:
 # First, enable Dwolla on your Plaid developer dashboard at https://dashboard.plaid.com/team/integrations.
 # Scroll down to Dwolla and click on the 'Enable' button.
 # You will need to open a Dwolla sandbox account at https://developers.dwolla.com/guides/sandbox.
