--- a/.env.template
+++ b/.env.template
@@ -10,6 +10,8 @@ PLAID_SECRET_SANDBOX=
 
 PLAID_ENV=sandbox
 
+# IMPORTANT: Also update ngrok.yml in the /ngrok directory to add your authtoken
+
 # If you want to test the app using a payment processor, set IS_PROCESSOR to 'true'.
 # The processor we use for testing in this sample app is Dwolla.
 # Dwolla is just one of the many payment providers who have partnered with Plaid. You can view the full list of
@@ -30,8 +32,8 @@ IS_PROCESSOR=false
 DWOLLA_ACCESS_TOKEN=
 DWOLLA_MASTER_ACCOUNT_ID=
 
-# Only required for OAuth:
-
+# (Optional) Redirect URI settings section
+# Only required for OAuth redirect URI testing (not common on desktop):
 # Sandbox Mode:
 # Set the PLAID_SANDBOX_REDIRECT_URI below to 'http://localhost:3002/oauth-link'.
 # The OAuth redirect flow requires an endpoint on the developer's website
