upgrade to ngrok agent 3

--- a/ngrok/ngrok.yml
+++ b/ngrok/ngrok.yml
@@ -1,3 +1,4 @@
 web_addr: 0.0.0.0:4040
 # Fill this in with your authtoken from https://dashboard.ngrok.com/get-started/your-authtoken
 authtoken: 
+version: 2
