--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,12 +27,12 @@ services:
       <<: *common-variables
       PLAID_CLIENT_ID:
       PLAID_SECRET_SANDBOX:
-      PLAID_SECRET_DEVELOPMENT:
+      PLAID_SECRET_PRODUCTION:
       IS_PROCESSOR:
       DWOLLA_ACCESS_TOKEN:
       DWOLLA_MASTER_ACCOUNT_ID:
       PLAID_SANDBOX_REDIRECT_URI:
-      PLAID_DEVELOPMENT_REDIRECT_URI:
+      PLAID_PRODUCTION_REDIRECT_URI:
       PLAID_ENV:
       PORT: 5000
       DB_PORT: 5432
