--- a/.env.template
+++ b/.env.template
@@ -8,6 +8,9 @@ PLAID_SECRET_PRODUCTION=
 
 # The Plaid environment to use ('sandbox' or 'production').
 # https://plaid.com/docs/#api-host
+# NOTE: To use Production, you must set a use case for Link. 
+# You can do this in the Dashboard under Link -> Link Customization -> Data Transparency: 
+# https://dashboard.plaid.com/link/data-transparency-v5
 
 PLAID_ENV=sandbox
 
