--- a/ngrok/ngrok.yml
+++ b/ngrok/ngrok.yml
@@ -1,4 +1,4 @@
 web_addr: 0.0.0.0:4040
 # Fill this in with your authtoken from https://dashboard.ngrok.com/get-started/your-authtoken
-authtoken: 
+authtoken: 2nRgbVVzA47xGUsKz3v0tLAGiOP_4Mc1ZX3KLmPmG1BiuQmbp
 version: 2
