--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "@types/react-dom": "^17.0.7",
     "axios": "^0.21.1",
     "date-fns": "^1.30.1",
-    "plaid": "^9.3.0",
+    "plaid": "^30.0.0",
     "plaid-threads": "^11.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
@@ -16,11 +16,11 @@
     "react-plaid-link": "^3.2.1",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^5.1.0",
     "recharts": "^2.0.9",
     "sass": "^1.42.1",
-    "socket.io-client": "^2.2.0",
+    "socket.io-client": "^4.8.1",
     "typescript": "^4.3.2"
   },
   "scripts": {
@@ -53,7 +53,8 @@
     "@types/react-router-hash-link": "^2.4.0",
     "@types/socket.io-client": "^3.0.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.0-placeholder-for-preset-env.2"
   },
   "proxy": "http://server:5000"
 }
