--- a/server/package.json
+++ b/server/package.json
@@ -9,18 +9,18 @@
   },
   "dependencies": {
     "@hapi/boom": "^7.4.2",
-    "axios": "^0.26.1",
+    "axios": "^1.7.8",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "express": "^4.21.1",
     "express-promise-router": "^3.0.3",
     "lodash": "^4.17.19",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "node-fetch": "^2.3.0",
     "pg": "^8.7.1",
-    "plaid": "^9.3.0",
-    "socket.io": "^2.2.0"
+    "plaid": "^30.0.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "eslint": "^6.2.1",
