the yak has been shaved

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -8,6 +8,8 @@ WORKDIR /opt/client
 RUN npm ci
 
 COPY ["src/", "/opt/client/src/"]
+COPY ["src/setupProxy.js", "/opt/client/src/setupProxy.js"]
 COPY ["public/", "/opt/client/public/"]
+COPY ["tsconfig.json", "/opt/client/"]
 
 CMD ["npm", "start"]
