--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@types/react-dom": "^18.2.0",
     "axios": "^1.7.9",
     "date-fns": "^1.30.1",
+    "http-proxy-middleware": "^2.0.6",
     "plaid": "^39.1.0",
     "plaid-threads": "^11.5.0",
     "prop-types": "^15.7.2",
