--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,13 @@
 # Your Plaid keys, which can be found in the Plaid Dashboard.
 # https://dashboard.plaid.com/developers/keys
 
-PLAID_CLIENT_ID=
-PLAID_SECRET_SANDBOX=
+PLAID_CLIENT_ID=58b9a231bdc6a453f37c338f
+PLAID_SECRET_SANDBOX=9bc5eba87ec3bccadeb5a6f0d83a90
 PLAID_SECRET_PRODUCTION=
 
+# The ruleset key to evaluate the transfer with Balance or Signal Transaction Scores, using Plaid Signal Rules
+# You can create a ruleset in the Plaid Dashboard at https://dashboard.plaid.com/signal/risk-profiles?environment=sandbox
+RULESET_KEY=
 
 # The Plaid environment to use ('sandbox' or 'production').
 # https://plaid.com/docs/#api-host
