--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       PLAID_SANDBOX_REDIRECT_URI:
       PLAID_PRODUCTION_REDIRECT_URI:
       PLAID_ENV:
+      RULESET_KEY:
       PORT: 5000
       DB_PORT: 5432
       DB_HOST_NAME: db
