(squashed after history cleanup)

--- a/.env.template
+++ b/.env.template
@@ -5,6 +5,9 @@ PLAID_CLIENT_ID=
 PLAID_SECRET_SANDBOX=
 PLAID_SECRET_PRODUCTION=
 
+# The ruleset key to evaluate the transfer with Balance or Signal Transaction, using Plaid Signal Rules
+# You can create a ruleset in the Plaid Dashboard at https://dashboard.plaid.com/signal/risk-profiles?environment=sandbox
+RULESET_KEY=
 
 # The Plaid environment to use ('sandbox' or 'production').
 # https://plaid.com/docs/#api-host
