--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:10.15.3-alpine
+FROM node:18-alpine
 
 COPY ["package.json", "/opt/client/"]
 COPY ["package-lock.json", "/opt/client/"]
@@ -8,6 +8,8 @@ WORKDIR /opt/client
 RUN npm ci
 
 COPY ["src/", "/opt/client/src/"]
+COPY ["src/setupProxy.js", "/opt/client/src/setupProxy.js"]
 COPY ["public/", "/opt/client/public/"]
+COPY ["tsconfig.json", "/opt/client/"]
 
 CMD ["npm", "start"]
