--- a/client/package.json
+++ b/client/package.json
@@ -4,23 +4,24 @@
   "private": true,
   "dependencies": {
     "@types/jest": "^26.0.23",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.7",
-    "axios": "^0.21.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "axios": "^1.7.9",
     "date-fns": "^1.30.1",
-    "plaid": "^9.3.0",
+    "http-proxy-middleware": "^2.0.6",
+    "plaid": "^39.1.0",
     "plaid-threads": "^11.5.0",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-plaid-link": "^3.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-plaid-link": "^3.5.0",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "4.0.1",
+    "react-scripts": "5.0.1",
     "react-toastify": "^5.1.0",
     "recharts": "^2.0.9",
     "sass": "^1.42.1",
-    "socket.io-client": "^2.2.0",
+    "socket.io-client": "^4.8.0",
     "typescript": "^4.3.2"
   },
   "scripts": {
