--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.4"
-
 x-common-variables: &common-variables
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: password
@@ -10,7 +8,7 @@ volumes:
 
 services:
   db:
-    image: postgres:11.2
+    image: postgres:16-alpine
     volumes:
       - ./database/init:/docker-entrypoint-initdb.d
       - "pg_${PLAID_ENV}_data:/var/lib/postgresql/data"
@@ -34,6 +32,7 @@ services:
       PLAID_SANDBOX_REDIRECT_URI:
       PLAID_PRODUCTION_REDIRECT_URI:
       PLAID_ENV:
+      RULESET_KEY:
       PORT: 5000
       DB_PORT: 5432
       DB_HOST_NAME: db
