--- a/ngrok/ngrok.yml
+++ b/ngrok/ngrok.yml
@@ -1,4 +1,5 @@
-web_addr: 0.0.0.0:4040
-# Fill this in with your authtoken from https://dashboard.ngrok.com/get-started/your-authtoken
-authtoken: 
-version: 2
+version: 3
+agent:
+  # Fill this in with your authtoken from https://dashboard.ngrok.com/get-started/your-authtoken
+  authtoken: 2pfiovB20GgzUR2KuGUOFXKQUlh_6MNEVq7Hvj8ASkH8RpcYd
+  web_addr: 0.0.0.0:4040
