--- a/ngrok/ngrok.yml
+++ b/ngrok/ngrok.yml
@@ -1,5 +1,5 @@
 version: 3
 agent:
   # Fill this in with your authtoken from https://dashboard.ngrok.com/get-started/your-authtoken
-  authtoken: 2pfiovB20GgzUR2KuGUOFXKQUlh_6MNEVq7Hvj8ASkH8RpcYd
+  authtoken: 
   web_addr: 0.0.0.0:4040
