--- a/server/package.json
+++ b/server/package.json
@@ -8,27 +8,27 @@
     "lint": "eslint **/*.js -c .eslintrc.json"
   },
   "dependencies": {
-    "@hapi/boom": "^7.4.2",
+    "@hapi/boom": "^9.1.4",
     "axios": "^1.7.9",
     "cookie-parser": "^1.4.7",
-    "debug": "~2.6.9",
+    "debug": "^4.3.7",
     "express": "^4.21.2",
-    "express-promise-router": "^3.0.3",
+    "express-promise-router": "^4.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "morgan": "^1.10.1",
-    "node-fetch": "^2.3.0",
-    "pg": "^8.7.1",
+    "node-fetch": "^2.7.0",
+    "pg": "^8.16.3",
     "plaid": "^39.1.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "eslint": "^6.2.1",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-prettier": "^3.0.1",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "nodemon": "^3.1.9",
-    "prettier": "^1.16.4"
+    "prettier": "^3.4.2"
   }
 }
